frontend/src/pages/root/index.module.css
.RootMain {
    width: 75%;
    height: 70vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0 12.5%;
}

.RootMain .RootContent {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.RootMain .text {
    font-size: 2rem;
    font-weight: 600;
    display: flex;
    flex-direction: column;
}

.RootMain .text img {
    width: 170px;
    height: auto;
    margin: 0 .5rem
}

.RootMain .searchBar {
    width: 700px;
    height: 55px;
    display: flex;
    border-radius: 50px;
}

.RootMain .searchBar .wrapperInput {
    width: 90%;
    display: flex;
    gap: 0.75rem;
    border-radius: 50px 0 0 50px;
    background-color: #f2f2f2;
    padding: 0 0 0 1rem;
    border: 1px solid #9d9d9d;
}

.RootMain .searchBar .wrapperInput img {
    height: 50%;
    opacity: 75%;
}

.RootMain .searchBar .wrapperInput input {
    width: 100%;
    height: 100%;
    font-size: 1.5rem;
    border: none;
    background-color: #f2f2f2;
}

.RootMain .searchBar .wrapperInput input:focus {
    outline: none;
}

.RootMain .searchBar .wrapperInput,
input {
    display: flex;
    align-items: center;
}

.RootMain .searchBar .wrapperInput input::placeholder {
    opacity: 75%;
    font-size: 1.5rem;
}

.RootMain .searchBar .searchButton {
    width: 10%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 0 50px 50px 0;
    background-color: #363636;
    cursor: pointer;
}

.RootMain .searchBar .searchButton img {
    width: 50%;
    height: 50%;
}

